--- a/week1/app/src/main/res/values/themes.xml
+++ b/week1/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Week1" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+<!--        <item name="colorPrimary">@color/black</item>-->
+<!--        <item name="colorPrimaryVariant">@color/blue</item>-->
+<!--        <item name="colorOnPrimary">@color/white</item>-->
     </style>
 
     <style name="Theme.Week1" parent="Base.Theme.Week1" />
